welcome.lessons.welcome.variables.Variables.scala.error
Variables:2: error: Missing closing brace `}' assumed here
var nbPas = 0
^Variables:3: error: expected class or object definition
var nbPas2 = 0
^Variables:4: error: expected class or object definition
while (!estSurBiscuit) {
^